# 702-smart-device-security

./: .gitignore  Playground.apk  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/playground/: MainActivity.kt  MyApplication.kt  PlaygroundApplication.kt
app/src/main/java/com/example/playground/model/: Message.kt
app/src/main/java/com/example/playground/network/: AIImageService.kt  ApiKeyCombiner.kt  DecryptorCaller.kt  NativeKeyStore.kt
app/src/main/java/com/example/playground/ui/components/: ChatBubble.kt  EmptyChat.kt  FullScreenImageViewer.kt  ImageView.kt  SendButton.kt  TextField.kt
app/src/main/java/com/example/playground/ui/theme/: Theme.kt
app/src/main/java/com/example/playground/util/: RootChecker.kt  RootDetectorNative.kt
app/src/main/java/com/example/playground/utils/: ApiKeyHelper.kt  ImageDownloader.kt
app/src/main/jni/: CMakeLists.txt  aiservice.c  api_key_combiner.c  api_key_retriever.c  keystore_decryptor.c  root_detector.c
app/src/main/res/drawable/: arrow_up.xml  square.xml
app/src/main/res/xml/: network_security_config.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
